--- a/pom.xml
+++ b/pom.xml
@@ -33,7 +33,7 @@
         <dependency> <!-- My toolbox -->
             <groupId>com.frejdh.util.common</groupId>
             <artifactId>common-toolbox</artifactId>
-            <version>1.0.0</version>
+            <version>1.0.1-SNAPSHOT</version>
         </dependency>
 
         <dependency> <!-- Validate properties -->
@@ -49,10 +49,23 @@
             <version>1.18.8</version>
         </dependency>
 
+        <dependency> <!-- Apache configurations -->
+            <groupId>commons-configuration</groupId>
+            <artifactId>commons-configuration</artifactId>
+            <version>1.10</version>
+        </dependency>
+
         <dependency> <!-- Used for its ansi objects -->
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot</artifactId>
             <version>2.3.1.RELEASE</version>
+        </dependency>
+
+        <dependency> <!-- Annotation processor for Spring-boot -->
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-configuration-processor</artifactId>
+            <version>2.3.1.RELEASE</version>
+            <optional>true</optional>
         </dependency>
 
         <dependency>
@@ -65,6 +78,25 @@
 
     <build>
         <plugins>
+            <plugin> <!-- For annotations -->
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-maven-plugin</artifactId>
+            </plugin>
+            <plugin> <!-- For annotations -->
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>3.7.0</version>
+                <configuration>
+                    <compilerVersion>${maven.compiler.source}</compilerVersion>
+                    <source>${maven.compiler.source}</source>
+                    <target>${maven.compiler.target}</target>
+                    <annotationProcessors>
+                        <annotationProcessor>org.springframework.boot.configurationprocessor.ConfigurationMetadataAnnotationProcessor</annotationProcessor>
+                        <annotationProcessor>lombok.launch.AnnotationProcessorHider$AnnotationProcessor</annotationProcessor>
+                    </annotationProcessors>
+                </configuration>
+            </plugin>
+
             <plugin> <!-- Optional. Push artifact and files to github upon mvn deploy -->
                 <inherited>false</inherited>
                 <groupId>com.github.github</groupId>
