--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,7 @@
 
     <groupId>com.frejdh.util.common</groupId>
     <artifactId>ansi-logger</artifactId>
-    <version>1.0.1</version>
+    <version>1.1.0</version>
     <packaging>jar</packaging>
 
     <properties>
@@ -33,7 +33,13 @@
         <dependency> <!-- My toolbox -->
             <groupId>com.frejdh.util.common</groupId>
             <artifactId>common-toolbox</artifactId>
-            <version>1.0.1</version>
+            <version>1.0.2</version>
+        </dependency>
+
+        <dependency>
+            <groupId>com.frejdh.util.enviroment</groupId>
+            <artifactId>configurator</artifactId>
+            <version>1.1.0</version>
         </dependency>
 
         <dependency> <!-- Validate properties -->
@@ -56,9 +62,23 @@
         </dependency>
 
         <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-configuration-processor</artifactId>
+            <version>2.3.1.RELEASE</version>
+            <optional>true</optional>
+        </dependency>
+
+        <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
             <version>4.13</version>
+            <scope>test</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>org.mockito</groupId>
+            <artifactId>mockito-all</artifactId>
+            <version>1.10.19</version>
             <scope>test</scope>
         </dependency>
     </dependencies>
@@ -122,6 +142,10 @@
         <repository>
             <id>mvn-lib-common-toolbox</id>
             <url>https://raw.github.com/Frejdh/mvn-lib-common-toolbox/releases/</url>
+        </repository>
+        <repository>
+            <id>mvn-lib-configurator</id>
+            <url>https://raw.github.com/Frejdh/mvn-lib-configurator/releases/</url>
         </repository>
     </repositories>
 </project>
