Removed javax import

--- a/pom.xml
+++ b/pom.xml
@@ -85,6 +85,15 @@
 
     <build>
         <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>3.8.1</version>
+                <configuration>
+                    <forceJavacCompilerUse>true</forceJavacCompilerUse>
+                </configuration>
+            </plugin>
+
             <plugin> <!-- Optional. Push artifact and files to github upon mvn deploy -->
                 <inherited>false</inherited>
                 <groupId>com.github.github</groupId>
