--- a/pom.xml
+++ b/pom.xml
@@ -4,14 +4,14 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <parent>
-        <groupId>com.frejdh.util</groupId>
-        <artifactId>library-master-pom</artifactId>
-        <version>1.0.0</version>
+        <groupId>com.frejdh</groupId>
+        <artifactId>master-pom</artifactId>
+        <version>2.1.0</version>
     </parent>
 
     <groupId>com.frejdh.util.common</groupId>
     <artifactId>ansi-logger</artifactId>
-    <version>1.1.0</version>
+    <version>1.2.0-SNAPSHOT</version>
     <packaging>jar</packaging>
 
     <properties>
@@ -21,57 +21,62 @@
         <!-- Deployment for artifacts -->
         <github.repository.owner>Frejdh</github.repository.owner>
         <github.repository.name>mvn-lib-ansi-logger</github.repository.name>
+
+        <jcolor.version>5.2.0</jcolor.version>
+        <frejdh.common-toolbox.version>1.1.0</frejdh.common-toolbox.version>
+        <frejdh.configurator.version>2.0.0</frejdh.configurator.version>
     </properties>
 
     <dependencies>
         <dependency> <!-- Colored output -->
             <groupId>com.diogonunes</groupId>
             <artifactId>JColor</artifactId>
-            <version>5.0.0</version>
+            <version>${jcolor.version}</version>
         </dependency>
 
         <dependency> <!-- My toolbox -->
             <groupId>com.frejdh.util.common</groupId>
             <artifactId>common-toolbox</artifactId>
-            <version>1.0.2</version>
+            <version>${frejdh.common-toolbox.version}</version>
         </dependency>
 
-        <dependency>
-            <groupId>com.frejdh.util.enviroment</groupId>
-            <artifactId>configurator</artifactId>
-            <version>1.1.0</version>
+        <dependency> <!-- My toolbox -->
+            <groupId>com.frejdh.util.environment</groupId>
+            <artifactId>configurator-service</artifactId>
+            <version>${frejdh.configurator.version}</version>
         </dependency>
 
         <dependency> <!-- Validate properties -->
             <groupId>org.hibernate.validator</groupId>
             <artifactId>hibernate-validator</artifactId>
-            <version>6.0.18.Final</version>
             <scope>compile</scope>
         </dependency>
 
         <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
-            <version>1.18.8</version>
         </dependency>
 
         <dependency> <!-- Used for its ansi objects -->
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot</artifactId>
-            <version>2.3.1.RELEASE</version>
         </dependency>
 
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-configuration-processor</artifactId>
-            <version>2.3.1.RELEASE</version>
             <optional>true</optional>
         </dependency>
 
+        <dependency> <!-- Used for its ansi objects -->
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-test</artifactId>
+            <scope>test</scope>
+        </dependency>
+
         <dependency>
-            <groupId>junit</groupId>
-            <artifactId>junit</artifactId>
-            <version>4.13</version>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter-api</artifactId>
             <scope>test</scope>
         </dependency>
 
