--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -1,3 +1,5 @@
-ansi.logging.paths.com=trace
+ansi.logging.paths.com.frejdh=TRACE
 ansi.logging.timestamp.enabled=true
-ansi.logging.default-level=trace
+ansi.logging.default-level=DEBUG
+ansi.logging.pathss=DEBUG
+ansi.logging.paths.com.frejdh.util.common.ansi.LoggerTests=DEBUG
