--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,7 @@
 
     <groupId>com.frejdh.util.common</groupId>
     <artifactId>ansi-logger</artifactId>
-    <version>1.2.0-SNAPSHOT</version>
+    <version>1.2.0</version>
     <packaging>jar</packaging>
 
     <properties>
@@ -23,8 +23,8 @@
         <github.repository.name>mvn-lib-ansi-logger</github.repository.name>
 
         <jcolor.version>5.2.0</jcolor.version>
-        <frejdh.common-toolbox.version>1.1.0</frejdh.common-toolbox.version>
-        <frejdh.configurator.version>2.0.0</frejdh.configurator.version>
+        <frejdh.common-toolbox.version>1.2.0</frejdh.common-toolbox.version>
+        <frejdh.configurator.version>2.1.0-SNAPSHOT</frejdh.configurator.version>
     </properties>
 
     <dependencies>
@@ -40,11 +40,18 @@
             <version>${frejdh.common-toolbox.version}</version>
         </dependency>
 
-        <dependency> <!-- My toolbox -->
+        <dependency> <!-- Configurator -->
             <groupId>com.frejdh.util.environment</groupId>
             <artifactId>configurator-service</artifactId>
             <version>${frejdh.configurator.version}</version>
         </dependency>
+
+		<dependency> <!-- Configurator (test utils) -->
+			<groupId>com.frejdh.util.environment</groupId>
+			<artifactId>configurator-test-helper</artifactId>
+			<version>${frejdh.configurator.version}</version>
+			<scope>test</scope>
+		</dependency>
 
         <dependency> <!-- Validate properties -->
             <groupId>org.hibernate.validator</groupId>
@@ -55,6 +62,11 @@
         <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>org.apache.logging.log4j</groupId>
+            <artifactId>log4j-core</artifactId>
         </dependency>
 
         <dependency> <!-- Used for its ansi objects -->
@@ -68,7 +80,7 @@
             <optional>true</optional>
         </dependency>
 
-        <dependency> <!-- Used for its ansi objects -->
+        <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-test</artifactId>
             <scope>test</scope>
